# namebadge-friends-around-me

./: .gitignore  CHANGES_OTA_INTEGRATION.md  CMakeLists.txt  DEVELOPMENT.md  PUBLISHING.md  README.md  partitions.csv  publish.sh  publish_friends_app.sh  sdkconfig.defaults
.claude/: settings.json
doc/: ARCHITECTURE.md  BLE_FRIENDS_FEATURE.md  DEVELOPMENT_PLAN.md  NAMEBADGE_BOOTING.md
main/: CMakeLists.txt  app_version.h  ble_advertising.c  ble_advertising.h  ble_scanning.c  ble_scanning.h  buttons.c  buttons.h  display.c  display.h  leds.c  leds.h  main.c  met_tracker.c  met_tracker.h  ui.c  ui.h
