idf_component_register(SRCS "main.c"
                            "ble_advertising.c"
                            "ble_scanning.c"
                            "display.c"
                            "ui.c"
                            "buttons.c"
                            "met_tracker.c"
                            "leds.c"
                    INCLUDE_DIRS "."
                    REQUIRES nvs_flash bt driver esp_driver_rmt)
